welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:4: error: ';' expected but 'true' found.
	if(isMom==true){retunr true}else{return false}
                               ^