welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
if(isAsleep==true){return false}
else{if(isMorning==true){
	if(isMom==true){retunr true}else{return false}
}else{return true}}
}
